Bug 1008483 - Part 2. Readd missing nsPrintfCString.h include which has broken some local builds. r=me